gateway/1.12/modules/ROOT/pages/policies-included-mcp-support.adoc
= MCP Support Policy
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:keywords: api gateway, flex gateway, gateway, policy

[width="100%", cols="5,15"]
|===
>s| Policy Name | MCP Support
>s|Summary | Adds MCP support to a Flex Gateway MCP server instance. This policy is required for your MCP server instance to function properly.
>s|Category | MCP
>s|First Flex Gateway version available | v1.9.3
>s| Returned Status Codes | No return codes exist for this policy.
|===

include::partial$mcp-version-support.adoc[]

== Summary

The MCP Support Policy configures Flex Gateway to support MCP server instances. You must apply this policy to all MCP server instances for the instance to function properly. If you don't apply this policy, Flex Gateway might throw a runtime error.

The MCP Support policy enables the *Total MCP Calls* metric that tracks the total successful and unsuccessful calls made to the MCP server. To view the total MCP calls, see xref:flex-managed-view-api-metrics.adoc[].

Configure the policy to inject the MCP primitive as a request header toward the upstream backend so that downstream policies can use it. To learn more, see <<Configuring Policy Parameters>>.

NOTE: This policy must come first in policy order. If this policy doesn't come first, Flex Gateway might throw a runtime error.

== Configuring Policy Parameters

include::partial$policy-title-headers.adoc[tag=configFileTitleOnly]

The MCP Support policy isn't supported in Local Mode.

include::partial$policy-title-headers.adoc[tag=ui]

[%header%autowidth.spread,cols="a,a,a"]
|===
| Element | Description | Default
| Inject MCP Name Headers | Injects the MCP primitive as a request header for downstream policy use. The policy injects `tools/call` as `x-ms-mcp-tool-name`, `prompts/get` as `x-ms-mcp-prompt-name`, and `resources/read` as `x-ms-mcp-resource-uri`. The policy only injects one header per request. | Disabled
|===
